# psd

./: .gitignore  CMakeLists.txt  rootlogon.C  runTask.c  test01.cpp  test02.cpp  test03.cpp  test04.cpp
PSD/: CMakeLists.txt  PSDLinkDef.h  TFillTask.cxx  TFillTask.h  TMyTask.cxx  TMyTask.h
PSD/PROOF-INF/: SETUP.C
cmake/modules/: root-utils.cmake
